<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_gazebo_plugin</name>
  <version>1.0.0</version>
  <description>The uwb_gazebo_plugin package. Includes some plugins for Gazebo</description>
  <author email="valentin.barral@udc.es">Valentin Barral</author>
  <maintainer email="corra981@gmail.com">giacomo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>rosmsgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
